# KL-UAS-System

./: .gitignore  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md
3D files/GroundControlStation/Mounts/: K400 Keyboard Tray.3mf
3D files/Parts/Battery Quick Release/: Battery-Quick-Release.3mf
3D files/Parts/Camera's/: ziptie-gopro.stl
3D files/Parts/Landing Gear/: LandingGear.3mf  Leg v2.step
Deprecated/[OLD] STM32Blackpill/: BottomPanelCode.code-workspace  README.md
Docs/: CodeDocumentation.md  Mejzlik Static thrust calculator_Version1.xlsx  index.html
Docs/Bestellen/: Bestellijst.md
Docs/Calulations/: Mejzlik Static thrust calculator_Version1.xlsx
Docs/Datasheets/: Mejzlik_Propellers_Dynamic_Thrust_calculator_version 1.xlsm
Docs/Facturen/: Overview.md
Docs/Logs/: LOG00081.txt
GCS/: CMakeLists.txt  FreeRTOSConfig.h  SCH_Flightcase_2026-04-02.json  tmpclaude-362a-cwd  tusb_config.h
GCS/.claude/: settings.local.json
GCS/.claude/agents/: debug-specialist.md
GCS/docs/: PCB_DESIGN.md  PERIPHERAL_SCREENS_IMPL.md  PI_CODE_HARDWARE_REFERENCE.md  RS485_PERIPHERAL_BUS.md  warning_panel.md
GCS/src/: analog.c  analog.h  led_sk6812.c  led_sk6812.h  led_ws2811.c  led_ws2811.h  main.c  pins.h  protocol.c  protocol.h  rs485.c  rs485.h  screen_display.c  screen_display.h  screen_st7735.c  screen_st7735.h  sk6812.pio  test_tft.c  usb_cdc.c  veml7700.c  ws2811.pio
Ground Control Station/: GCS_Button_Mapping.md  Pinnen.md
Ground Control Station/3D files/: Knopjes Charger v4.3mf
Ground Control Station/3D files/Charger/: Knopjes Charger v2.3mf
Ground Control Station/App/: CMakeLists.txt  README.md  flightdatawidget.cpp  flightdatawidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h
Ground Control Station/Arduino testcode/ScreenPowerSwitch/: ScreenPowerSwitch.ino
Ground Control Station/BottomPanelCode/: INTEGRATION_SUMMARY.md  READING_LIGHT_FEATURE.md  README_WORKLIGHT.md  WORKLIGHT_DIAGRAM.md  platformio.ini
Ground Control Station/BottomPanelCode/include/: leds.cpp  leds.h  pins.cpp  pins.h
Ground Control Station/BottomPanelCode/src/: main.cpp
Ground Control Station/Deprecated/[OLD] STM32Blackpill/: SINGLE_STRIP_UPDATE.md
Ground Control Station/GCS/: CMakeLists.txt  FreeRTOSConfig.h  tusb_config.h
Ground Control Station/PCBCodeDocs/: CodeDocumentation.md  GCS_Button_Mapping.md  GCS_Technical_Docs_Rev2.md  Wiring.md  bottom_panel_developer_overview.docx
Ground Control Station/Sticker/: KL-GCS-PAN01.dxf  Sketch15.dxf
Ground Control Station/Testcode/: gcs_tester.py  parser.py
KL-GCS-PICODE/PICODE/: CLAUDE.md  CMakeLists.txt  Main.qml  Theme.qml  case_twin_config.json  gcs_ui_design_system.md  main.cpp  tmpclaude-c2bd-cwd
KL-GCS-PICODE/PICODE/.claude/: settings.local.json
KL-GCS-PICODE/PICODE/assets/models/: Case v13.gltf  case_v13.glb
KL-GCS-PICODE/PICODE/backend/: gcsstate.cpp  gcsstate.h  mavlinklink.cpp  mavlinklink.h  picolink.cpp  picolink.h
KL-GCS-PICODE/PICODE/components/: BigButton.qml  CaseView.qml  CaseView3D.qml  Case_v13.qml  ConfirmOverlay.qml  DataCard.qml  NavBar.qml  QuickPanel.qml  SliderRow.qml  StatusBar.qml  StatusDot.qml
KL-GCS-PICODE/PICODE/components/meshes/: meshes_0__mesh.mesh  meshes_1000__mesh.mesh  meshes_1001__mesh.mesh  meshes_1002__mesh.mesh  meshes_1003__mesh.mesh  meshes_1004__mesh.mesh  meshes_1005__mesh.mesh  meshes_1006__mesh.mesh  meshes_1007__mesh.mesh  meshes_1008__mesh.mesh  meshes_1009__mesh.mesh  meshes_100__mesh.mesh  meshes_1010__mesh.mesh  meshes_1011__mesh.mesh  meshes_1012__mesh.mesh  meshes_1013__mesh.mesh  meshes_1014__mesh.mesh  meshes_1015__mesh.mesh  meshes_1016__mesh.mesh  meshes_1017__mesh.mesh  meshes_1018__mesh.mesh  meshes_1019__mesh.mesh  meshes_101__mesh.mesh  meshes_1020__mesh.mesh  meshes_1021__mesh.mesh  meshes_1022__mesh.mesh  meshes_1023__mesh.mesh  meshes_1024__mesh.mesh  meshes_1025__mesh.mesh  meshes_1026__mesh.mesh  meshes_1027__mesh.mesh  meshes_1028__mesh.mesh  meshes_1029__mesh.mesh  meshes_102__mesh.mesh  meshes_1030__mesh.mesh  meshes_1031__mesh.mesh  meshes_1032__mesh.mesh  meshes_1033__mesh.mesh  meshes_1034__mesh.mesh  meshes_1035__mesh.mesh  (+2260 more)
KL-GCS-PICODE/PICODE/docs/: GCS_PROGRAMMING_SPEC.md  GCS_SCREEN_DESIGN.md  UPDATES.md
KL-GCS-PICODE/PICODE/pages/: CameraPage.qml  CasePage.qml  DashPage.qml  DronePage.qml  MapPage.qml  MissionPage.qml  ParamsPage.qml  PayloadPage.qml  PeriphPage.qml
Peripherals/: .gitignore
Peripherals/.claude/: settings.local.json
Peripherals/Docs/: RS485_PERIPHERAL_BUS.md
Peripherals/Framework/: README.md
Peripherals/LightBar/: CMakeLists.txt
Peripherals/PanTilt/: CMakeLists.txt
Peripherals/Searchlight/: CMakeLists.txt
Software/Arduino/: WarningPanelTest.ino
Software/BackupsFC/: INAV_8.0.1_cli_20250527_150549.txt
Software/Tracking/: 2d.py  App.py  drone_3d_orientation_log.csv  drone_follow_log.csv  drone_path_log.csv  hardwaretest.py  map.py  midas_test.py  test.py  yolo.py
Software/UI/: UI.py
Sticker/Sketches/: Sketch13.dxf
Testcode/: gcs_tester.py
Testcode/MODBUSTester/: CMakeLists.txt  MODBUSTester.c  web.c  web.h
application/: CMakeLists.txt  README.md
application/src/: HIDHandler.cpp  HIDHandler.h  MainWindow.cpp  MainWindow.h  SerialHandler.cpp  SerialHandler.h
docs/: _config.yml  ground-control-station.md  hardware.md  index.md
(+108 files in other folders)
